--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.0",
     "crypto-js": "^4.0.0",
     "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
     "save": "^2.4.0",
     "ts-md5": "^1.2.7",
