--- a/angular.json
+++ b/angular.json
@@ -29,13 +29,12 @@
             ],
             "styles": [
               "src/styles.scss",
-			  "node_modules/bootstrap/dist/css/bootstrap.min.css"
+			  "./node_modules/bootstrap/dist/css/bootstrap.min.css"
 
             ],
             "scripts": [
-            "node_modules/jquery/dist/jquery.min.js",
-			"node_modules/bootstrap/dist/js/bootstrap.min.js",
-		"src/PaytmChecksum.js"
+            "./node_modules/jquery/dist/jquery.min.js",
+			"./node_modules/bootstrap/dist/js/bootstrap.min.js"
               
 			]
           },
